fix: title-2 margin on mobile for anchors

--- a/src/styles/typography/_titles.scss
+++ b/src/styles/typography/_titles.scss
@@ -17,7 +17,7 @@
   margin-top: 5rem;
 
   @include media("<=phone") {
-    margin-top: 2rem;
+    margin-top: 3.5rem;
   }
 }
 
